change default deck ui text